# Batch-LIO

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.zh-CN.md  package.xml
bench/: benchmark_representative_ivox.cpp
config/: avia.yaml  horizon.yaml  ouster64.yaml  velody16.yaml
docker/: README.md  entrypoint.sh  jazzy.Dockerfile
docs/: CUDA.md  FRALIO_CUDA.md  PLAN.md  PLAN_V2.md  RESULTS.md  RESULTS_ROS2.md
docs/figures/: make_figs.py
docs/results/v2_baseline/: README.md  batch_1ms.profile.txt  batch_1ms_fine.profile.txt  batch_1ms_omp.profile.txt  batch_1ms_omp_fine.profile.txt  clean_off.profile.txt  clean_on.profile.txt  fm_off.profile.txt  fm_on.profile.txt  pointwise.profile.txt
docs/superpowers/plans/: 2026-07-22-ros2-humble-port.md
docs/superpowers/specs/: 2026-07-22-ros2-humble-port-design.md
include/: common_lib.h  stage_profiler.h
include/cuda/: cuda_representative_ivox.h
include/ivox/: representative_ivox.h
launch/: avia_batch.launch.py  gdb_debug_example.launch  mapping_avia.launch  mapping_avia.launch.py  mapping_horizon.launch  mapping_horizon.launch.py  mapping_ouster64.launch  mapping_ouster64.launch.py  mapping_velody16.launch  mapping_velody16.launch.py
scripts/: ablations.sh  avia_batch.launch  benchmark_fr_lio_cache.sh  compare_traj.py  convert_bag.py  run_lio.sh  test_cuda_backend.sh
src/: Estimator.cpp  Estimator.h  IMU_Processing.cpp  IMU_Processing.h  deskew.h  laserMapping.cpp  li_initialization.cpp  li_initialization.h  parameters.cpp  parameters.h  preprocess.cpp  preprocess.h  stage_profiler.cpp
src/cuda/: cuda_representative_ivox.cu  cuda_representative_ivox_stub.cpp
test/: test_cuda_representative_ivox.cpp  test_deskew.cpp  test_representative_ivox.cpp  test_smoke.py
