<?xml version="1.0"?>
<package format="3">
  <name>batch_lio</name>
  <version>0.0.0</version>
  <description>batch-LIO: batch-wise Point-LIO with intra-window deskew (ROS2 Humble port).</description>
  <maintainer email="dev@livoxtech.com">batch-lio</maintainer>
  <license>MIT</license>
  <author email="hdj65822@connect.hku.hk">Dongjiao He (Point-LIO)</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>livox_ros_driver2</depend>
  <depend>libpcl-all-dev</depend>
  <depend>libeigen3-dev</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>ros2bag</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
